tests/specs/fmt/parse_error/parse_error.out
Error formatting: [WILDCARD]parse_error.ts
   SyntaxError: Expected '{', got '<eof>'
  |
2 | class Test
  | ~~~~~
    at file:///[WILDCARD]parse_error.ts:2:1
error: Failed to format 1 of 1 checked file
